[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Elements/Ground/Ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Objects/Circuit/NodalStepOne.png" type="Texture" id=3]
[ext_resource path="res://Resources/Puzzles/Chapter IV/NodalAnalysis/NodalStepOne.gd" type="Script" id=4]
[ext_resource path="res://Resources/Puzzles/Chapter IV/NodalAnalysis/NodalOne.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 115.784, 0.805969 )

[node name="NodalStepOne" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Background" parent="." index="0"]
visible = false
margin_top = -0.698338
margin_bottom = -0.698334
color = Color( 0.447059, 0.447059, 0.447059, 1 )

[node name="InstructionLabel" type="Label" parent="." index="2"]
margin_left = 16.7875
margin_top = 10.5093
margin_right = 289.787
margin_bottom = 24.5093
text = "Connect the ground to the Reference Node"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="3"]
margin_left = 208.334
margin_top = 149.687
margin_right = 309.334
margin_bottom = 174.687
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="." index="4"]
margin_left = 263.898
margin_top = 113.204
margin_right = 320.898
margin_bottom = 133.204
rect_scale = Vector2( 0.8, 0.8 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ground" parent="." index="5" instance=ExtResource( 2 )]
position = Vector2( 285.28, 93.5711 )
rotation = -1.5708

[node name="Button" type="Button" parent="Ground" index="3"]
margin_left = -3.45363
margin_top = -10.0
margin_right = 23.5464
margin_bottom = 10.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NodalCircuit" type="Area2D" parent="." index="6"]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NodalCircuit" index="0"]
position = Vector2( 137.94, 126.556 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="NodalCircuit" index="1"]
position = Vector2( 136.035, 89.6086 )
scale = Vector2( 0.41846, 0.41846 )
texture = ExtResource( 3 )

[node name="NodeVoltages" type="Label" parent="." index="7"]
margin_left = 3.1547
margin_top = 151.509
margin_right = 99.1547
margin_bottom = 165.509
text = "Node Voltages:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V1" type="LineEdit" parent="NodeVoltages" index="0"]
margin_left = 106.678
margin_top = 0.214874
margin_right = 164.678
margin_bottom = 24.2149
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V2" type="LineEdit" parent="NodeVoltages" index="1"]
margin_left = 159.825
margin_top = 0.214874
margin_right = 217.825
margin_bottom = 24.2149
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
[connection signal="area_entered" from="Ground" to="." method="_on_Ground_area_entered"]
[connection signal="input_event" from="Ground" to="Ground" method="_on_CircuitElement_input_event"]
[connection signal="pressed" from="Ground/Button" to="Ground" method="_on_Button_pressed"]
[connection signal="text_entered" from="NodeVoltages/V1" to="." method="_on_V1_text_entered"]
[connection signal="text_entered" from="NodeVoltages/V2" to="." method="_on_V2_text_entered"]
